--- a/Baitaptrenlop.css
+++ b/Baitaptrenlop.css
@@ -33,3 +33,26 @@
     font-size: 30px;
     font-weight:bolder;
   }
+  @media only screen and (max-width:740px){
+    h1{
+      text-align: center;
+      font-size: 30px;
+    }
+    .article{
+      flex-direction: column;
+    }
+    .image-wrapper {
+      width: 100%;
+      overflow: hidden;
+    }
+    
+    .image-wrapper img {
+      width: 100%;
+      height: 300px; /* Điều chỉnh kích thước ảnh tại đây */
+      object-fit: cover; /* Cắt ảnh để đạt kích thước như đã định */
+      border-radius: 5px;
+    }
+    .image-wrapper p{
+      font-size: 15px;
+    }
+}
