--- a/bai30%.css
+++ b/bai30%.css
@@ -68,7 +68,7 @@ header li{
     width: 500x;
     height: 500px;
     padding: 150px 0;
-    margin: 0 500px;
+    margin: 0 400px;
   }
   p{
     font-size: 20px;
@@ -174,9 +174,9 @@ h3{
     padding-left: 30px;
   }
   .part4{
+    position: relative;
     height: 1000px;
     color: white;
-    text-align: center;
     background-image: url("../static/tải\ xuống\ \(2\).jpg");
   }
   hr{
@@ -186,26 +186,13 @@ h3{
   }
   .part4 img{
     margin: 0;
-  }
-  .part4 .anh2 img{
-    height: 1000px;
+    position: absolute;
+    height: 1200px;
   }
   .part7 .anh2 img{
     height: 850px;
     padding-left: 200px;
   }
-  .part4 .anh1 img{
-    height: 500px;
-  }
-  .part4 .anh1{
-    padding-left: 400px;
-  } 
-   .part4 .piece img{
-    height: 200px;
-  }
-  .part4 .piece{
-    padding-right: 300px;
-  } 
   .part5{
     height: 500px;
   }
